--- a/.github/workflows/static-binaries.yml
+++ b/.github/workflows/static-binaries.yml
@@ -17,7 +17,7 @@ jobs:
 
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             filename: libSDL3.so
             version: $SDL3_VERSION
             deps: |
