--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -38,7 +38,7 @@ tasks:
         requires:
           vars: [LIBRARY]
         vars:
-            DIR: '{{if eq .LIBRARY "sdl"}}{{""}}{{else}}{{.LIBRARY}}{{end}}'
+            DIR: './{{if eq .LIBRARY "sdl"}}{{""}}{{else}}{{.LIBRARY}}{{end}}'
         cmds:
             # Generate SDL3 methods heuristically as a starting point
-            - go run ./cmd/methodgen --dir DIR --library LIBRARY
+            - go run ./cmd/methodgen --dir {{ .DIR }} --library {{ .LIBRARY }}
