--- a/.github/workflows/static-binaries-sdl.yml
+++ b/.github/workflows/static-binaries-sdl.yml
@@ -7,53 +7,87 @@ env:
   SDL3_VERSION: 3.2.8
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    container: ${{ matrix.container }}
-
+  build-windows:
+    name: Download Windows
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
-
+      fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-latest
-            container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:beta
-            filename: libSDL3.so
-            version: $SDL3_VERSION
-          - os: windows-2025
-            filename: Release/SDL3.dll
-            version: $env:SDL3_VERSION
-          - os: macos-latest
-            filename: libSDL3.dylib
-            version: $SDL3_VERSION
-            flags: -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
-        
+          arch: [x64, x86, arm64]
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Clone SDL3
-      run: git clone --depth 1 --branch release-${{ matrix.version }} https://github.com/libsdl-org/SDL.git
-    - name: Install dependencies
-      if: ${{ matrix.deps }} != ''
-      run: ${{ matrix.deps }}
-    - name: CMake configure
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: >
-        cd SDL &&
-        cmake -S . -B build
-        -DCMAKE_C_COMPILER=clang
-        -DCMAKE_BUILD_TYPE=Release
-        -DSDL_SHARED=ON
-        -DSDL_DISABLE_INSTALL=ON
-        -DSDL_DISABLE_INSTALL_DOCS=ON
-        ${{ matrix.flags }}
-    - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: >
-        cd SDL &&
-        cmake --build build --config Release
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: Binary ${{ matrix.os }}
-        path: SDL/build/${{ matrix.filename }}
+      - name: Download release build
+        run: wget https://github.com/libsdl-org/SDL/releases/download/release-${{ env.SDL3_VERSION }}/SDL3-${{ env.SDL3_VERSION }}-win32-${{ matrix.arch }}.zip
+      - name: Upload Build
+        uses: actions/upload-artifact@v4
+        with: 
+            name: sdl-windows-${{ matrix.arch }}
+            path: SDL3-${{ env.SDL3_VERSION }}-win32-${{ matrix.arch }}.zip
+
+  build-linux:
+    name: Build Linux
+    runs-on: ubuntu-latest
+    container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:beta
+    defaults:
+      run:
+        working-directory: ./SDL
+    steps:
+      - name: Clone SDL3
+        working-directory: .
+        run: git clone --depth 1 --branch release-${{ env.SDL3_VERSION }} https://github.com/libsdl-org/SDL.git
+      - name: Configure
+        run: >
+          cmake -G Ninja
+          -DCMAKE_BUILD_TYPE=Release
+          -DSDL_SHARED=ON
+          -DSDL_STATIC=OFF
+          -DSDL_DISABLE_INSTALL=ON
+          -DSDL_DISABLE_INSTALL_DOCS=ON
+          -DSDL_INSTALL_TESTS=OFF
+          -S . -B build
+      - name: Build
+        run: cmake --build build --config Release && pwd
+      - name: Upload Build
+        uses: actions/upload-artifact@v4
+        with: 
+            name: sdl-linux
+            path: SDL/build/*.so.0
+
+  build-macos:
+    name: Build for Apple
+    runs-on: macos-14
+    defaults:
+      run:
+        working-directory: ./SDL
+    strategy:
+      fail-fast: false
+      matrix:
+          target: [iOS, tvOS, visionOS, '']
+    steps:
+      - name: Clone SDL3
+        working-directory: .
+        run: git clone --depth 1 --branch release-${{ env.SDL3_VERSION }} https://github.com/libsdl-org/SDL.git
+      - name: Setup Xcode version
+        uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+            xcode-version: "16.1"
+      - name: Configure
+        run: >
+          cmake -G "Xcode"
+          -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED=NO
+          -DCMAKE_SYSTEM_NAME=${{ matrix.target }}
+          -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
+          -DCMAKE_BUILD_TYPE=Release
+          -DSDL_SHARED=ON
+          -DSDL_STATIC=OFF
+          -DSDL_DISABLE_INSTALL=ON
+          -DSDL_DISABLE_INSTALL_DOCS=ON
+          -DSDL_INSTALL_TESTS=OFF
+          -S . -B build
+      - name: Build
+        run: cmake --build build --config Release
+      - name: Upload Build
+        uses: actions/upload-artifact@v4
+        with: 
+            name: sdl-apple-${{ matrix.target }}
+            path: SDL/build/*
