--- a/.github/workflows/sdl-ttf-build.yml
+++ b/.github/workflows/sdl-ttf-build.yml
@@ -26,7 +26,7 @@ jobs:
 
   build-linux:
     name: Build Linux
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:beta
     defaults:
       run:
