--- a/.github/workflows/sdl-ttf-build.yml
+++ b/.github/workflows/sdl-ttf-build.yml
@@ -14,7 +14,6 @@ jobs:
       fail-fast: false
       matrix:
           arch: [x64, x86, arm64]
-
     steps:
       - name: Download release build
         run: wget https://github.com/libsdl-org/SDL_ttf/releases/download/release-${{ env.TTF_VERSION }}/SDL3_ttf-${{ env.TTF_VERSION }}-win32-${{ matrix.arch }}.zip
@@ -76,7 +75,7 @@ jobs:
           -DSDLTTF_VENDORED=ON
           -S . -B build
       - name: Build
-        run: cmake --build build --config Release && pwd && ls -l build
+        run: cmake --build build --config Release
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
@@ -101,6 +100,11 @@ jobs:
         uses: libsdl-org/setup-sdl@main
         with:
           cmake-generator: Ninja
+          cmake-arguments: |
+            -DCMAKE_SYSTEM_NAME=${{ matrix.target }} \
+            -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64" \
+            -DSDL_DISABLE_INSTALL_DOCS=ON \
+            -DSDL_INSTALL_TESTS=OFF
           version: 3-head
           shell: sh
       - name: Setup MacOS dependencies
@@ -117,6 +121,7 @@ jobs:
         run: >
           cmake -G Ninja
           -DBUILD_SHARED_LIBS=ON
+          -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
           -DCMAKE_POSITION_INDEPENDENT_CODE=ON
           -DSDLTTF_HARFBUZZ=ON
           -DSDLTTF_WERROR=ON
@@ -130,7 +135,7 @@ jobs:
           -DSDLTTF_VENDORED=ON
           -S . -B build
       - name: Build
-        run: cmake --build build --config Release && pwd && ls -l build
+        run: cmake --build build --config Release
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
