--- a/.github/workflows/emscripten-build.yml
+++ b/.github/workflows/emscripten-build.yml
@@ -4,16 +4,15 @@ on:
   workflow_dispatch:
 
 env:
-  SDL3_VERSION: 3.2.6
+  SDL3_VERSION: 3.2.8
   TTF_VERSION: 3.2.0
   IMAGE_VERSION: 3.2.0
-  MIXER_VERSION: 2.8.1
+  MIXER_VERSION: main
 
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
-        
+    runs-on: ubuntu-latest    
     steps:
     - uses: actions/checkout@v4
     - name: Get Emscripten
@@ -22,31 +21,27 @@ jobs:
         cd emsdk
         ./emsdk install tot
         ./emsdk activate tot
-    - name: Clone SDL, SDL_ttf, SDL_image, SDL_mixer
+    - name: Clone SDL and satellite libraries
       run: |
         git clone --depth 1 --branch release-$SDL3_VERSION https://github.com/libsdl-org/SDL.git
-        git clone --depth 1 --recurse-submodules --branch release-$TTF_VERSION https://github.com/libsdl-org/SDL_ttf.git
-        git clone --depth 1 --branch release-$IMAGE_VERSION https://github.com/libsdl-org/SDL_image.git
-        git clone --depth 1 --branch release-$MIXER_VERSION https://github.com/libsdl-org/SDL_mixer.git
+        git clone --recurse-submodules --branch release-$TTF_VERSION https://github.com/libsdl-org/SDL_ttf.git
+        git clone --recurse-submodules --branch release-$IMAGE_VERSION https://github.com/libsdl-org/SDL_image.git
+        git clone --recurse-submodules https://github.com/libsdl-org/SDL_mixer.git
     - name: Build
       run: |
+        cp -r .github/workflows/cmake/* .
         source emsdk/emsdk_env.sh
-        mkdir SDL/build; cd SDL/build; export SDL3_DIR=$(pwd); emcmake cmake ..; emmake make -j4; cd ../..
-        sudo apt-get update
-        sudo apt-get -y install cmake file fonts-dejavu-core libfreetype-dev libharfbuzz-dev pkg-config
-        mkdir SDL_ttf/build; cd SDL_ttf/build; emcmake cmake -DSDL3_DIR=$SDL3_DIR -DSDLTTF_HARFBUZZ=ON -DCMAKE_BUILD_TYPE=Release ..; emmake make -j4; ls -l; cd ../..
-        emcc -s LINKABLE=1 -s EXPORTED_RUNTIME_METHODS="['addFunction', 'allocateUTF8','UTF8ToString', 'stringToUTF8', 'getValue', 'setValue']" -s ALLOW_MEMORY_GROWTH=1 -s ALLOW_TABLE_GROWTH=1 -s EXPORT_ALL -s DEFAULT_LIBRARY_FUNCS_TO_INCLUDE='$addFunction' SDL/build/libSDL3.a -o sdl.html
-    - name: Prepare for upload
-      run: |
-        mkdir _site
-        mv sdl* _site/
-    - name: Fix permissions
-      run: |
-        chmod -c -R +rX "_site/" | while read line; do
-          echo "::warning title=Invalid file permissions automatically fixed::$line"
-        done
+        emcmake cmake -S . -B build
+        cmake --build build --config Release --parallel
+        cd build
+        ls -l
+        emmake make -j4
+        ls -l
+        ls -l Release
+        emcc -s LINKABLE=1 -s EXPORTED_RUNTIME_METHODS="['addFunction', 'allocateUTF8','UTF8ToString', 'stringToUTF8', 'getValue', 'setValue']" -s ALLOW_MEMORY_GROWTH=1 -s ALLOW_TABLE_GROWTH=1 -s MAXIMUM_MEMORY=1gb -s EXPORT_ALL -s DEFAULT_LIBRARY_FUNCS_TO_INCLUDE='$addFunction' libSDL3_ttf.a libSDL3_mixer.a libSDL3_image.a libSDL3.a -o sdl.html
+        ls -l
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: Binary WASM+js
-        path: _site
+        path: build/*
