--- a/.github/workflows/sdl-image-build.yml
+++ b/.github/workflows/sdl-image-build.yml
@@ -1,4 +1,4 @@
-name: Build SDL_image binaries
+name: Build SDL_image
 
 on:
   workflow_dispatch:
@@ -64,7 +64,6 @@ jobs:
         run: >
           cmake -G Ninja
           -DBUILD_SHARED_LIBS=ON
-          -DSDLTTF_WERROR=ON
           -DCMAKE_BUILD_TYPE=Release
           -DSDL_SHARED=ON
           -DSDL_STATIC=OFF
