--- a/.github/workflows/sdl-shadercross-build.yml
+++ b/.github/workflows/sdl-shadercross-build.yml
@@ -52,12 +52,11 @@ jobs:
           cmake -S external/SPIRV-Cross -B spirv_cross_build -GNinja \
             -DCMAKE_BUILD_TYPE=Release \
             -DSPIRV_CROSS_SHARED=ON \
-            -DSPIRV_CROSS_STATIC=ON \
-            -DCMAKE_INSTALL_PREFIX=${PWD}/spirv_cross_prefix \
+            -DSPIRV_CROSS_STATIC=ON
           cmake --build spirv_cross_build
           cmake --install spirv_cross_build
-          # spirv_cross_prefix=${PWD}/spirv_cross_prefix
-          # echo "spirv_cross_c_shared_ROOT=${spirv_cross_prefix}:${spirv_cross_prefix}/share/spirv_cross_c_shared" >>${GITHUB_ENV}
+          spirv_cross_prefix=${PWD}/spirv_cross_prefix
+          echo "spirv_cross_c_shared_ROOT=${spirv_cross_prefix}:${spirv_cross_prefix}/share/spirv_cross_c_shared" >>${GITHUB_ENV}
       - name: Check that versioning is consistent
         # We only need to run this once: arbitrarily use the Linux build
         run: ./build-scripts/test-versioning.sh
@@ -73,7 +72,7 @@ jobs:
           -DSDLSHADERCROSS_INSTALL=OFF \
           -DSDLSHADERCROSS_INSTALL_RUNTIME=OFF \
           -DSDLSHADERCROSS_INSTALL_CPACK=OFF \
-          -DSDLSHADERCROSS_INSTALL_MAN=OFF \
+          -DSDLSHADERCROSS_INSTALL_MAN=OFF
           -S . -B build
       - name: Build
         run: cmake --build build --config Release
@@ -124,17 +123,17 @@ jobs:
             -DSPIRV_CROSS_SHARED=ON \
             -DSPIRV_CROSS_STATIC=ON \
             -DCMAKE_INSTALL_PREFIX=${PWD}/spirv_cross_prefix \
-            -DCMAKE_OSX_ARCHITECTURES="${{ matrix.arch }}"
+            -DCMAKE_OSX_ARCHITECTURES="${{ matrix.arch }}" \
             -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0
           cmake --build spirv_cross_build
           cmake --install spirv_cross_build
-          # spirv_cross_prefix=${PWD}/spirv_cross_prefix
-          # echo "spirv_cross_c_shared_ROOT=${spirv_cross_prefix}:${spirv_cross_prefix}/share/spirv_cross_c_shared" >>${GITHUB_ENV}
+          spirv_cross_prefix=${PWD}/spirv_cross_prefix
+          echo "spirv_cross_c_shared_ROOT=${spirv_cross_prefix}:${spirv_cross_prefix}/share/spirv_cross_c_shared" >>${GITHUB_ENV}
       - name: Configure
         run: >
           cmake -G Ninja
-          -DCMAKE_OSX_ARCHITECTURES="${{ matrix.arch }}"
-          -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0
+          -DCMAKE_OSX_ARCHITECTURES="${{ matrix.arch }}" \
+          -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
           -DCMAKE_BUILD_TYPE=Release \
           -DSDLSHADERCROSS_SHARED=ON \
           -DSDLSHADERCROSS_STATIC=OFF \
