ttf: Consistent build directives

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -55,8 +55,7 @@ tasks:
             # Generate SDL3 bindings 
             - go run ./cmd/ffi2go --config "cmd/internal/assets/config/{{.LIBRARY}}.json" --ffi "cmd/internal/assets/ffi/{{.LIBRARY}}.json"
             - purego-gen --no-warnings --function-name "initialize" --input {{.INPUT}} --extra {{.EXTRA | join ","}}
-            - '{{if eq .LIBRARY "sdl"}}purego-gen --no-library-handle --no-warnings --function-name "initialize_ex" --input {{.DIR}}/{{.LIBRARY}}_functions_ex.go --extra {{.EXTRA | join ","}}{{end}}'
-            - '{{if eq .LIBRARY "ttf"}}purego-gen --no-library-handle --no-warnings --function-name "initialize_ex" --input {{.DIR}}/{{.LIBRARY}}_functions_ex.go --extra {{.EXTRA | join ","}}{{end}}'
+            - '{{if regexMatch .LIBRARY "sdl|ttf"}}purego-gen --no-library-handle --no-warnings --function-name "initialize_ex" --input {{.DIR}}/{{.LIBRARY}}_functions_ex.go --extra {{.EXTRA | join ","}}{{end}}'
 
     gen-methods:
         desc: Generate methods for SDL3 library (first pass)
