--- a/.github/workflows/sdl-mixer-build.yml
+++ b/.github/workflows/sdl-mixer-build.yml
@@ -88,6 +88,8 @@ jobs:
           -S . -B build
       - name: Build
         run: cmake --build build --config Release
+      - name: Strip binaries
+        run: find build -type f -name "*.so.0" -exec strip {} \;
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
