--- a/.github/workflows/go-build-test.yml
+++ b/.github/workflows/go-build-test.yml
@@ -2,13 +2,14 @@ name: Build / Test
 
 on:
     pull_request:
-        types: [ready_for_review]
+        types: [opened, synchronize, reopened, ready_for_review]
     push:
         branches:
             - main
 
 jobs:
   test:
+    if: github.event.pull_request.draft == false
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
