--- a/.github/workflows/go-build-test.yml
+++ b/.github/workflows/go-build-test.yml
@@ -28,7 +28,11 @@ jobs:
         - name: go build
           run: |
             go build -v ./...
+            go build ./examples/gpu/examples
+            go build ./examples/helloworld
+            go build ./examples/renderer/09-scaling-textures
             env GOOS=js GOARCH=wasm go build -v ./...
+            env GOOS=js GOARCH=wasm go build ./examples/helloworld
         
         - name: go test
           run : |
