--- a/.github/workflows/go-build-test.yml
+++ b/.github/workflows/go-build-test.yml
@@ -1,4 +1,4 @@
-name: Build / Test
+name: Build - Test
 
 on:
     pull_request:
@@ -13,9 +13,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go: ['1.24.x', '1.25.x']
+        go: ['1.25.x']
     
-    name: Test with Go ${{ matrix.go }} on ${{ matrix.os }}
+    name: Go ${{ matrix.go }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
         - name: Checkout
