--- a/.github/workflows/sdl-build/sdl-ttf.yml
+++ b/.github/workflows/sdl-build/sdl-ttf.yml
@@ -2,9 +2,11 @@ name: Build SDL_ttf
 
 on:
   workflow_dispatch:
-
-env:
-  TTF_VERSION: 3.2.0
+    inputs:
+      version:
+        description: "SDL_ttf version"
+        required: true
+        type: string
 
 jobs:
   build-windows:
@@ -16,12 +18,12 @@ jobs:
           arch: [x64, x86, arm64]
     steps:
       - name: Download release build
-        run: wget https://github.com/libsdl-org/SDL_ttf/releases/download/release-${{ env.TTF_VERSION }}/SDL3_ttf-${{ env.TTF_VERSION }}-win32-${{ matrix.arch }}.zip
+        run: wget https://github.com/libsdl-org/SDL_ttf/releases/download/release-${{ inputs.version }}/SDL3_ttf-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
             name: sdl-ttf-windows-${{ matrix.arch }}
-            path: SDL3_ttf-${{ env.TTF_VERSION }}-win32-${{ matrix.arch }}.zip
+            path: SDL3_ttf-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
 
   build-linux:
     name: Build Linux
@@ -54,7 +56,7 @@ jobs:
             ${NULL+}
       - name: Clone SDL_ttf
         working-directory: .
-        run: git clone --recurse-submodules --branch release-${{ env.TTF_VERSION }} https://github.com/libsdl-org/SDL_ttf.git
+        run: git clone --recurse-submodules --branch release-${{ inputs.version }} https://github.com/libsdl-org/SDL_ttf.git
       - name: Check that versioning is consistent
         # We only need to run this once: arbitrarily use the Linux build
         run: ./build-scripts/test-versioning.sh
@@ -114,7 +116,7 @@ jobs:
               ${NULL+}
       - name: Clone SDL_ttf
         working-directory: .
-        run: git clone --recurse-submodules --branch release-${{ env.TTF_VERSION }} https://github.com/libsdl-org/SDL_ttf.git
+        run: git clone --recurse-submodules --branch release-${{ inputs.version }} https://github.com/libsdl-org/SDL_ttf.git
       - name: Configure
         run: >
           cmake -G Ninja
