--- a/.github/workflows/sdl-build/sdl.yml
+++ b/.github/workflows/sdl-build/sdl.yml
@@ -1,10 +1,12 @@
 name: Build SDL
 
 on:
-  workflow_dispatch:
-
-env:
-  SDL3_VERSION: 3.2.16
+  workflow_call:
+    inputs:
+      version:
+        description: "SDL version"
+        required: true
+        type: string
 
 jobs:
   build-windows:
@@ -17,12 +19,12 @@ jobs:
 
     steps:
       - name: Download release build
-        run: wget https://github.com/libsdl-org/SDL/releases/download/release-${{ env.SDL3_VERSION }}/SDL3-${{ env.SDL3_VERSION }}-win32-${{ matrix.arch }}.zip
+        run: wget https://github.com/libsdl-org/SDL/releases/download/release-${{ inputs.version }}/SDL3-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
             name: sdl-windows-${{ matrix.arch }}
-            path: SDL3-${{ env.SDL3_VERSION }}-win32-${{ matrix.arch }}.zip
+            path: SDL3-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
 
   build-linux:
     name: Build Linux
@@ -34,7 +36,7 @@ jobs:
     steps:
       - name: Clone SDL3
         working-directory: .
-        run: git clone --depth 1 --branch release-${{ env.SDL3_VERSION }} https://github.com/libsdl-org/SDL.git
+        run: git clone --depth 1 --branch release-${{ inputs.version }} https://github.com/libsdl-org/SDL.git
       - name: Configure
         run: >
           cmake -G Ninja
@@ -66,7 +68,7 @@ jobs:
     steps:
       - name: Clone SDL3
         working-directory: .
-        run: git clone --depth 1 --branch release-${{ env.SDL3_VERSION }} https://github.com/libsdl-org/SDL.git
+        run: git clone --depth 1 --branch release-${{ inputs.version }} https://github.com/libsdl-org/SDL.git
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.6.0
         with:
