--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -32,6 +32,9 @@ jobs:
     name: Call workflows
     runs-on: ubuntu-latest
     steps:
+        - name: Checkout
+          uses: actions/checkout@v5
+
         # Build all binaries
         - name: SDL
           uses: ./sdl-build/sdl.yml
